[package]
name = "cargo-cpl"
version = "0.0.0"
authors = ["Ryo Yamashita <qryxip@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "A Cargo subcommand to manage your library for competitive programming."
repository = "https://github.com/qryxip/cargo-cpl"
keywords = ["competitive", "cli"]
categories = ["command-line-utilities", "development-tools::cargo-plugins"]
publish = false

[dependencies]
anyhow = "1.0.38"
atty = "0.2.14"
camino = "1.0.3"
cargo_metadata = "0.13.1"
cast = "0.2.3"
dirs-next = "2.0.0"
dunce = "1.0.1"
git2 = "0.13.17"
if_chain = "1.0.1"
ignore = "0.4.17"
indexmap = "1.6.2"
indoc = "1.0.3"
itertools = "0.10.0"
maplit = "1.0.2"
once_cell = "1.7.2"
percent-encoding = "2.1.0"
proc-macro2 = { version = "1.0.24", features = ["span-locations"] }
quote = "1.0.9"
serde = { version = "1.0.124", features = ["derive"] }
serde_json = "1.0.64"
shell-escape = "0.1.5"
structopt = "0.3.21"
syn = { version = "1.0.64", features = ["full", "parsing", "printing"] }
termcolor = "1.1.2"
toml_edit = "0.2.0"
url = { version = "2.2.1", features = ["serde"] }
v_htmlescape = "0.13.0"
walkdir = "2.3.1"
xshell = "0.1.9"
